--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body, html {
     margin: 0;
     padding: 0;
-	transition: 1s;
+    transition: 1s;
 }
 
 #container {
@@ -35,7 +35,7 @@ main {
   flex: 1;
 }
 
-#Nintendo {
+#Nintendo, #PlayStation, #XboX {
 	padding-top: 5rem;
 }
 
