--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body, html {
     margin: 0;
     padding: 0;
-    transition: 1s;
+	transition: 1s;
 }
 
 #container {
@@ -25,6 +25,7 @@ nav {
 	width: 100%;
 }
 nav a, button  {
+	font-weight: 700;
 	float: left;
 	display: block;
 	text-align: center;
@@ -50,8 +51,12 @@ main {
  }
 
 .card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 	text-align: center;
-    border-radius: 5%;
+    border-radius: 15px;
     flex: 1 0 500px;
     box-sizing: border-box;
     margin: 1rem;
@@ -69,6 +74,8 @@ main {
 .buy {
 	font-weight: 700;
     border: none;
+	
+	border-bottom-left-radius: 15px 15px;
     outline: 0;
     display: inline-block;
     padding: 8px;
@@ -164,12 +171,12 @@ label {
 }
 
 input[type=button], input[type=reset] {
-    padding: 12px 20px;
+    box-sizing: border-box;
+	padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     float: left;
-    margin: 0 10px 0 0;
 }
 input[type=button] {
     background: #4CAF50;
@@ -190,13 +197,18 @@ input[type=reset]:hover {
 .col-25 {
     float: left;
     width: 25%;
-margin-top: 6px;
+	margin-top: 6px;
 }
 
 .col-75 {
     float: left;
     width: 75%;
     margin-top: 6px;
+}
+
+#bttn-row {
+	display: flex;
+	justify-content: space-between;
 }
 
 @media screen and (max-width: 52em) {
@@ -214,23 +226,16 @@ margin-top: 6px;
     .modal-window {
         width: 85%;
     } 
-      .col-25, .col-75 {
+	.col-25, .col-75 {
         width: 100%;
         margin-top: 0;
     }
-      input[type=submit], input[type=reset] {
-          width: 45%;
-          margin-top:0;
+	input[type=button], input[type=reset] {
+		width: 45%;
+		margin-top:0;
     }
-      #bttn-row {
-          padding: 10px 0;
-    }
-      #bttnR {
-
-          padding-right: 5%;
-    }
-      #bttnS {
-          padding-left: 5%;
+	#bttn-row {
+		padding: 10px 0;
     }
 }
 
